Fix code block scrollbar not being clipped inside the container

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -77,6 +77,7 @@ p.admonition-title {
 .md-typeset pre > code {
     border-radius: 15px;
     border: 1px solid var(--md-typeset-table-color);
+    clip-path: inset(-0.5px round 15px);
 }
 
 @media screen and (max-width: 44.9844em) {
